Commit a hack workaround for PR 41448.

Not sure if this has any negative effects, but I'd rather have a system
that reboots than has working audio.